--- a/MemoD/app/src/main/res/layout/activity_post.xml
+++ b/MemoD/app/src/main/res/layout/activity_post.xml
@@ -9,45 +9,30 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:contentDescription="@string/app_name"
-            android:padding="15dp"
-            android:src="@drawable/back_button"
-            tools:ignore="ImageContrastCheck" />
+            android:layout_width="13dp"
+            android:layout_height="23dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/back"></ImageView>
 
         <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="6"
-            android:contentDescription="@string/app_name"
-            android:padding="15dp"
-            android:src="@drawable/main_logo" />
-
-        <ImageView
-            android:id="@+id/imageView12"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1.5"
-            android:contentDescription="@string/app_name"
-            android:padding="15dp"
-            android:src="@drawable/setting"
-            tools:ignore="ImageContrastCheck" />
-
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="130dp"
+            android:src="@drawable/logo" />
 
     </LinearLayout>
 
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="620dp"
         android:layout_marginTop="10dp">
 
         <LinearLayout
@@ -59,7 +44,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
-                android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -101,7 +85,6 @@
                 android:id="@+id/imageView5"
                 android:layout_width="match_parent"
                 android:layout_height="360dp"
-                android:layout_weight="1"
                 android:contentDescription="map" />
 
             <LinearLayout
@@ -182,21 +165,17 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+                android:layout_height="40dp"
+                android:orientation="horizontal"
+                android:layout_marginBottom="10dp">
 
                 <ImageView
-                    android:id="@+id/imageView21"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
+                    android:layout_width="24dp"
+                    android:id="@+id/music"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center"
                     android:layout_marginStart="15dp"
-                    android:layout_weight="0.5"
-                    android:background="@drawable/play_background"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="1dp"
-                    app:srcCompat="@android:drawable/ic_media_play" />
+                    android:src ="@drawable/music_play" />
 
                 <TextView
                     android:id="@+id/textView5"
@@ -244,7 +223,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:layout_marginTop="15dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginBottom="40dp">
 
                 <TextView
                     android:id="@+id/textView9"
@@ -270,8 +250,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="212dp"
-        android:layout_weight="1"
+        android:layout_height="75dp"
+
         android:gravity="bottom">
 
         <ImageView
